rook/0.9.2/minio/object-store.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: rook-minio
spec:
  type: NodePort
  ports:
    - port: 9000
  selector:
    app: minio
